[project]

name = "runscript"
version = "0.2.11"
description = "Simple script launcher"
readme = "README.md"
requires-python = ">=3.7"
license = {"file" = "LICENSE"}
keywords = ["script", "cli", "utility", "run", "launch", "task"]
authors = [
    {name = "Gregory Petukhov", email = "lorien@lorien.name"}
]
# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = ["setproctitle"]

[project.urls]
homepage = "http://github.com/lorien/runscript"

[project.scripts]
run = "runscript.cli:process_command_line"
grun = "runscript_gevent.cli:process_command_line"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["runscript", "runscript_gevent"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.isort]
#known_first_party = ["project"]
profile = "black"
line_length = 88
# skip_gitignore = true # throws errors in stderr when ".git" dir does not exist

[tool.bandit]
# B101 assert_used
# B410 Using HtmlElement to parse untrusted XML data
skips = ["B101", "B410"]

